# Barrier_Visual_Code

./: .gitignore  CMakeLists.txt  README.md  build_all.bat  build_debug.bat  build_release.bat  clean.bat
STM32F411_sdk/platform/Device/ST/STM32F411/Include/: stm32f4xx.h
app/: main.c
app/inc/: barrier.h  usart.h
app/src/: main.c
